# GSoC2019

./: .bashrc  .gitignore  .gitmodules  Dockerfile  PROPOSAL.md  README.md  activate_env.sh  build_dolfin.sh  build_dolfin_python.sh  doc.sh  install_meshio.sh  python_build_dolfin.sh  rebuild_dolfin.sh  run_docker.sh  run_test.sh  test.sh
.cache/fenics/: libffc_cmaps_69586377a2dc871c8a222292b64406616e15d217.c
.circleci/: config.yml
Demo/: GSoC2019_Summary.html  GSoC2019_Summary.md  demo_read_xdmf.py  poission_subdomain.h5  poission_subdomain.xdmf  poisson_subdomain.h5  poisson_subdomain.xdmf
Docker/: Dockerfile  docker-compose.yml
Docker/clion-debug/: docker-compose.yml.backup
Docker/mvc-array/: Dockerfile
Docker/mvc-xdmf/: Dockerfile
Notebooks/: Gmsh API.ipynb  MVC from array.ipynb  MVC.ipynb  Understanding Mesh Workflow.ipynb  Understanding MeshFunction and MeshValueCollection.ipynb  Understanding connectivity array-poisson-subdomain.ipynb  Understanding connectivity array.ipynb  Understanding gmsh physical groups.ipynb  Untitled.ipynb  Untitled1.ipynb  Visualising Mesh Function.ipynb  [DOLFIN-X] Poisson equation with multiple subdomains.ipynb  [NMWF] Poisson equation with multiple subdomains.ipynb  [WIP] Desired mesh workflow.ipynb  mesh.h5  mesh.xdmf  mesh_2d.h5  mvc.ipynb  mvc_1d.h5  mvc_1d.xdmf  poission subdomain.ipynb  poisson_subdomain_boundary.h5  poisson_subdomain_boundary.xdmf  poisson_subdomain_mesh.h5  poisson_subdomain_mesh.xdmf  unit_square.geo_unrolled
Scripts/cpp/xdmf/: CMakeLists.txt  XDMFFile.cpp  XDMFFile.h  main.cpp
(+132 files in other folders)
